--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,14 @@
 test.ipynb
 .vscode/
 
+#results
+methods/runidb/results/
+methods/punidb_noise=1/results/
+methods/punidb_noise=0/results/
+methods/punidb/results/
+methods/ed_ebm/ckpts/
+methods/ebm_runidb/results/      
+
 #env
 myenv
 
