first version of interleaved training – untested

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ methods/ebm_runidb/results/
 methods/cd_ebm/results/       
 methods/cd_ebm/ckpts/ 
 methods/cd_ebm/plots/ 
+methods/cd_runi_inter/results/       
+methods/cd_runi_inter/ckpts/ 
+methods/cd_runi_inter/plots/ 
 
 #env
 myenv
