implemented experiment management system on all experiments

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,12 @@ methods/ebm_runidb/results_with_delta_0.001/
 methods/cd_runi_inter/ckpts/ 
 methods/cd_runi_inter/plots/ 
 methods/cd_runi_inter/*/experiments/
+methods/cd_ebm/experiments/
+methods/cd_runi_inter/experiments/
+methods/ebm_runidb/experiments/
+methods/ed_ebm/experiments/
+methods/punidb/experiments/
+methods/runidb/experiments/
 
 #env
 myenv
