--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,60 @@
-asttokens                2.4.1
-contourpy                1.2.1
-cycler                   0.12.1
-decorator                5.1.1
-exceptiongroup           1.2.1
-executing                2.0.1
-filelock                 3.14.0
-fonttools                4.51.0
-fsspec                   2024.3.1
-ipdb                     0.13.13
-ipython                  8.25.0
-jedi                     0.19.1
-Jinja2                   3.1.4
-joblib                   1.4.2
-kiwisolver               1.4.5
-MarkupSafe               2.1.5
-matplotlib               3.8.4
-matplotlib-inline        0.1.7
-mpmath                   1.3.0
-networkx                 3.3
-numpy                    1.26.4
-nvidia-cublas-cu12       12.1.3.1
-nvidia-cuda-cupti-cu12   12.1.105
-nvidia-cuda-nvrtc-cu12   12.1.105
-nvidia-cuda-runtime-cu12 12.1.105
-nvidia-cudnn-cu12        8.9.2.26
-nvidia-cufft-cu12        11.0.2.54
-nvidia-curand-cu12       10.3.2.106
-nvidia-cusolver-cu12     11.4.5.107
-nvidia-cusparse-cu12     12.1.0.106
-nvidia-nccl-cu12         2.20.5
-nvidia-nvjitlink-cu12    12.4.127
-nvidia-nvtx-cu12         12.1.105
-packaging                24.0
-pandas                   2.2.2
-parso                    0.8.4
-pexpect                  4.9.0
-pillow                   10.3.0
-pip                      24.0
-prompt_toolkit           3.0.46
-ptyprocess               0.7.0
-pure-eval                0.2.2
-Pygments                 2.18.0
-pyparsing                3.1.2
-python-dateutil          2.9.0.post0
-pytz                     2024.1
-scikit-learn             1.4.2
-scipy                    1.13.0
-setuptools               69.1.1
-six                      1.16.0
-stack-data               0.6.3
-sympy                    1.12
-threadpoolctl            3.5.0
-tomli                    2.0.1
-torch                    2.3.1
-torchvision              0.18.1
-tqdm                     4.66.4
-traitlets                5.14.3
-triton                   2.3.1
-typing_extensions        4.11.0
-tzdata                   2024.1
-wcwidth                  0.2.13
-wheel                    0.42.0
+asttokens==2.4.1
+contourpy==1.2.1
+cycler==0.12.1
+decorator==5.1.1
+exceptiongroup==1.2.1
+executing==2.0.1
+filelock==3.14.0
+fonttools==4.51.0
+fsspec==2024.3.1
+ipdb==0.13.13
+ipython==8.25.0
+jedi==0.19.1
+Jinja2==3.1.4
+joblib==1.4.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+matplotlib-inline==0.1.7
+mpmath==1.3.0
+networkx==3.3
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
+packaging==24.0
+pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.3.0
+prompt_toolkit==3.0.46
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.18.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+scikit-learn==1.4.2
+scipy==1.13.0
+six==1.16.0
+stack-data==0.6.3
+sympy==1.12
+threadpoolctl==3.5.0
+tomli==2.0.1
+torch==2.3.1
+torchvision==0.18.1
+tqdm==4.66.4
+traitlets==5.14.3
+triton==2.3.1
+typing_extensions==4.11.0
+tzdata==2024.1
+wcwidth==0.2.13
