prior to meeting 09/07/2024

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ EB_GFN_full_repo/synthetic/test
 methods/eb_gfn/experiments/
 methods/dataq_dfs/experiments/
 methods/gfn/experiments/
+methods/dataq_dfs_ebm/
 
 #env
 myenv
