prior to setting up ebm with uniform positive examples

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,8 @@ EB_GFN_full_repo/synthetic/test
 methods/eb_gfn/experiments/
 methods/dataq_dfs/experiments/
 methods/gfn/experiments/
-methods/dataq_dfs_ebm/
+methods/dataq_dfs_ebm/experiments
+methods/uniform_ebm/experiments
 
 #env
 myenv
