--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ methods/dataq_dfs/experiments/
 methods/gfn/experiments/
 methods/dataq_dfs_ebm/experiments
 methods/uniform_ebm/experiments
+methods/mask_dfs/experiments
+
 mmd_results/
 
 #env
